# SupaTrupa-main

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  CYCLE_MANIFEST.md  DEPLOYMENT.md  EPISTEMIC_ENGINE.md  LICENSE  README.md  config.yaml  package.json  plan.md  pnpm-lock.yaml  railway.toml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
backend/jones_framework/: __init__.py
backend/jones_framework/api/: __init__.py  server.py
backend/jones_framework/arbitrage/: __init__.py  linguistic_arbitrage.py  sentiment_vector.py
backend/jones_framework/backtesting/: __init__.py  engine.py
backend/jones_framework/cache/: __init__.py  store.py
backend/jones_framework/cli/: __init__.py  constants.py  main.py
backend/jones_framework/config/: __init__.py  settings.py
backend/jones_framework/core/: __init__.py  activity_state.py  coherent_configuration.py  condition_state.py  correlation_cutter.py  knowledge_flow.py  manifold_bridge.py  novelty_search.py  schematism.py  shadow_tensor.py  tensor_ops.py  universal_tensor.py  value_function.py
backend/jones_framework/domains/: __init__.py  base.py  las_parser.py
backend/jones_framework/engine/: __init__.py  core.py
backend/jones_framework/events/: __init__.py  sourcing.py
backend/jones_framework/execution/: __init__.py  algorithms.py
backend/jones_framework/features/: __init__.py  store.py
backend/jones_framework/ml/: __init__.py
backend/jones_framework/monitoring/: __init__.py  observability.py
backend/jones_framework/perception/: __init__.py  advisory_engine.py  field_atlas.py  metric_warper.py  parameter_correlation.py  regime_classifier.py  tda_pipeline.py  topology_forecaster.py
backend/jones_framework/portal/: __init__.py  console.py  errors.py  runner.py  status.py
backend/jones_framework/portfolio/: __init__.py  optimizer.py
backend/jones_framework/risk/: __init__.py  engine.py
backend/jones_framework/sans/: __init__.py  continuity_guard.py  lora_adapter.py  mixture_of_experts.py
backend/jones_framework/scheduler/: __init__.py  jobs.py
backend/jones_framework/simulation/: __init__.py  paper_trading.py
backend/jones_framework/strategies/: __init__.py  alpha.py
backend/tests/: conftest.py  test_api.py  test_cts_integration.py  test_point_cloud.py
beta/: BETA_README.md  (+3 more)
(+167 files in other folders)
